@@ -1,3 +1,8 @@
+2004-03-09  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* ssl-thin.ads, ssl-wrappers.ads, ssl-wrappers.adb:
+	(SSLeay): New routine.
+
 2004-02-20  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
